--- a/css/style.css
+++ b/css/style.css
@@ -1142,12 +1142,7 @@ span {
 
 
 #projects .project-tile a i {
-  background-image: linear-gradient(30deg, #fff 10%, #aef50a, #fff 60%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 900%;
-  background-position: right;
-  animation: icon-gradient 2s linear infinite;
+  color: #aef50a;
   font-size: 1.8em;
   padding: .2em;
 }
@@ -1162,15 +1157,6 @@ span {
 
 #projects .project-tile a:hover i {
   transition: 1s ease;
-  /* transform: scale(1.6); */
-  /* letter-spacing: .2em; */
-  /* margin: .3em 0 0 1em; */
-}
-
-@keyframes icon-gradient {
-  100% {
-    background-position: left;
-  }
 }
 
 #projects .project-img {
