--- a/css/style.css
+++ b/css/style.css
@@ -1203,7 +1203,7 @@ span {
 }
 
 #projects .tech-list p {
-  color: yellowgreen;
+  color: rgb(173, 245, 29);
   margin: 5px;
   padding: 5px;
   font-size: 1.4em;
@@ -2313,6 +2313,10 @@ span {
     border-radius: 0px;
     margin: 5px;
   }
+  #projects .project-tile a i {
+    font-size: 1.2em;
+    padding: .2em;
+  }
 
   #projects .project-tile a:hover {
     border-radius: 10px;
@@ -2323,24 +2327,24 @@ span {
   }
 
   #projects .project-tile h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 600;
   }
 
   #projects .project-tile h2 {
-    font-size: 2rem;
-    font-weight: 400;
-    line-height: 1.5em;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1.3em;
+    margin-bottom: .5em;
   }
 
   #projects .project-tile p {
     font-size: 1.4rem;
   }
 
-  /* #projects .project-tile a:hover i {
-    transform: none;
-    letter-spacing: .2em;
-  } */
+  #projects .project-tile a:hover i {
+    transform: translateX(1em);
+  }
   #projects .project-item {
     height: 400px;
     margin: .5em;
