--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ span {
   position: absolute;
   top: 1em;
   left: 1em;
+  cursor: pointer;
 }
 @media only screen and (max-width: 360px){
   #header .links-container .nav-avi {
@@ -311,10 +312,14 @@ span {
 #header .links-container .nav-avi:hover img {
   transform: scale(1.2);
 }
+#header .nav-avi:active {
+  transition: .4s;
+  transform: scale(.7);
+}
 /* end of nav image */
 
 #header .nav-list ul li:hover .scroll-li {
-  transition: .3s ease;
+  transition: .3s;
   color: crimson;
 }
 
