--- a/css/style.css
+++ b/css/style.css
@@ -830,15 +830,26 @@ span {
 #skills .skills-bottom .icon {
   height: 80px;
   width: 80px;
-  border-radius: 50%;
-  box-shadow: 2px 2px 5px #000,
-    inset 2px 2px 3px #ddda,
-    inset -2px -2px 5px #000a;
+  border: none;
+  outline: none;
   padding: 10px;
   margin-top: 15px;
   margin-bottom: 20px;
+  position: relative;
 }
+#skills .icon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px #000,
+              inset 2px 2px 3px #ddda,
+              inset -2px -2px 5px #000a;
 
+}
 #skills .skills-bottom .icon img {
   width: 100%;
 }
