--- a/css/style.css
+++ b/css/style.css
@@ -898,18 +898,17 @@ span {
 /*Dropdown*/
 /* Dropdown Button */
 .dropbtn {
-  color: #fff;
-  /* width: 80vw; */
+  color: #eee;
   padding: .4em 4em;
   font-size: 2.2em;
   font-weight: 600;
   cursor: pointer;
   border: none;
+  outline: none;
   border-radius: 10px;
   background: linear-gradient(0deg, #dc134c, #333);
-  /* background: none; */
   text-align: center;
-  transition: .2s ease;
+  transition: .3s;
   font-family: 'Gruppo', cursive;
   position: relative;
   overflow: hidden;
@@ -921,14 +920,13 @@ span {
   position: absolute;
   bottom: 0;
   left: 0;
-  /* background: linear-gradient(0deg, #dc134c, #333); */
   width: 100%;
   height: 100%;
   border-radius: 10px;
   transition: .5s;
   box-shadow: 5px 10px 5px #000,
-    inset 3px 3px 5px #000a,
-    inset -3px -3px 5px #fffa;
+              inset 3px 3px 5px #000a,
+              inset -3px -3px 5px #fffa;
 }
 
 .dropbtn::after {
@@ -958,11 +956,12 @@ span {
 .dropbtn:hover,
 .dropbtn:focus {
   transition: .2s ease;
-  transform: scale(.96);
-  border: none;
-  outline: none;
 }
+.dropbtn:active {
+  transform: scale(.9);
+  transition: .3s;
 
+}
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
@@ -975,7 +974,6 @@ span {
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  background-color: #f4f4f4;
   width: 100vw;
   z-index: 1;
   justify-content: center;
@@ -986,7 +984,7 @@ span {
   background-position: center;
   background-attachment: fixed;
   position: relative;
-  padding-bottom: 100px;
+  padding-bottom: 10em;
 }
 
 .dropdown-content::before {
@@ -996,10 +994,7 @@ span {
   top: 0;
   height: 100%;
   width: 100%;
-  background-image: radial-gradient(#8d092e71, #000a);
-
-  backdrop-filter: blur(1px);
-  -webkit-backdrop-filter: blur(1px);
+  background:#000a;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
@@ -2610,6 +2605,8 @@ span {
     width: 100%;
     margin: 1.5%;
     height: 300px;
+    pointer-events: visible;
+    cursor: pointer;
   }
 
 
