--- a/css/style.css
+++ b/css/style.css
@@ -2096,27 +2096,30 @@ span {
   cursor: pointer;
   transform-style: preserve-3d;
 }
-
-#footer .social-icon::before {
-  content: "\f0c0";
+#footer .social-icon::before,
+#footer .social-icon::after {
   position: absolute;
-  font-family: 'Font Awesome 5 Free';
-  font-size: 2em;
-  text-align: center;
-  color: #ddd;
-  font-weight: 600;
   padding: .3em;
+  font-family: 'Font Awesome 5 Free';
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  font-weight: 600;
   border-radius: 10px;
+  transition: .5s;
+
+}
+#footer .social-icon::before {
+  content: "\f0c0";
+  font-size: 2.4em;
+  text-align: center;
+  color: #ddd;
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda,
-    inset -3px 0px 5px #000;
+              inset -3px 0px 5px #000;
   pointer-events: none;
-  transition: .5s ease;
   z-index: 1;
 }
 
@@ -2126,23 +2129,14 @@ span {
 
 #footer .social-icon::after {
   content: "\f007";
-  position: absolute;
-  font-family: 'Font Awesome 5 Free';
   font-size: 2em;
-  font-weight: 600;
-  padding: .3em;
   text-align: center;
   color: rgba(221, 221, 221, 0.307);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
   opacity: 0;
   background-image: linear-gradient(0deg, transparent, #29323cc2);
   box-shadow: inset 3px 3px 5px #000a,
-    inset -3px 0px 5px #ddda;
-  transition: 1s ease;
+              inset -3px 0px 5px #ddda;
+  transition: .5s ease;
 }
 
 #footer .social-icon:hover.social-icon::after {
@@ -2154,14 +2148,13 @@ span {
 #footer .social-item {
   height: 50px;
   width: 50px;
-  margin: 0 5px;
+  margin: 1em .5em 0;
   transition: 1s ease;
 }
 
 #footer .social-item img {
   filter: grayscale(0);
-  transition: 0.3s ease;
-
+  transition: .3s;
 }
 
 #footer .social-item i {
