--- a/css/style.css
+++ b/css/style.css
@@ -2087,11 +2087,12 @@ span {
 
 #footer .social-icon {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 90%;
   margin: 5px auto;
-  padding: 2em;
+  padding: 1em;
   border-radius: 5px;
+  overflow: hidden;
   position: relative;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -2129,7 +2130,7 @@ span {
 
 #footer .social-icon::after {
   content: "\f007";
-  font-size: 2em;
+  font-size: 2.2em;
   text-align: center;
   color: rgba(221, 221, 221, 0.307);
   opacity: 0;
@@ -2158,8 +2159,7 @@ span {
 }
 
 #footer .social-item i {
-  position: relative;
-  font-size: 3em;
+  font-size: 2em;
   margin: 0 10px;
   box-shadow: 2px 2px 1px rgba(221, 221, 221, 0.295);
   border-radius: 100%;
@@ -2171,9 +2171,38 @@ span {
   transition: 0.3s ease;
 }
 
+#footer .social-item a {
+  position: relative;
+}
+#footer .social-item a::before {
+  content: attr(data-icon);
+  /* content: 'dadaddada'; */
+  position: absolute;
+  bottom: -3.3em;
+  left: 0;
+  font-size: .9em;
+  color: #ddd;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: 1s;
+  transform: translateY(4em);
+}
+/* freecodecamp icon::before needs additional styling to fit in .social-icon div */
+#footer .social-item:nth-child(3) a::before {
+  font-size: .8em;
+  bottom: -3.8em;
+  left: -2em;
+}
+
 #footer .social-item i:hover {
   filter: grayscale(0.6);
   transform: scale(1.2);
+}
+
+#footer .social-icon:hover.social-icon a:before {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 #footer p,
@@ -2677,9 +2706,8 @@ span {
   #footer .social-icon {
     display: flex;
     margin: 30px auto;
-    padding: .5em 1em;
+    padding: 1.5em 1em;
     width: 50%;
-    justify-content: space-evenly;
     font-size: 4em;
   }
 
@@ -2697,7 +2725,17 @@ span {
     font-size: 1.1em;
     box-shadow: 1px 1px 5px rgba(221, 221, 221, 0.527);
   }
-
+  #footer .social-item a::before {
+    font-size: .5em;
+    bottom: -2.8em;
+    left: -50%;
+  }
+  /* freecodecamp icon::before needs additional styling to fit in .social-icon div */
+#footer .social-item:nth-child(3) a::before {
+  font-size: .5em;
+  bottom: -2.9em;
+  left: -80%;
+}
   #footer .social-icon i:hover {
     transition: all .3s ease-in-out;
     box-shadow: 1px 1px 1px rgba(221, 221, 221, 0.827);
