--- a/css/style.css
+++ b/css/style.css
@@ -1447,11 +1447,11 @@ span {
   height: 100%;
   width: 90%;
   position: relative;
-  /* filter: grayscale(0.3); */
   border-radius: 10px;
   margin-top: 20px;
   transition: .5s ease;
   transform: preserve-3d;
+  cursor: pointer;
 
 }
 
@@ -1462,14 +1462,19 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: url(/img/me.jpg);
+  background-size: cover;
   border-radius: 10px;
   transition: 1s ease;
-  box-shadow: inset 5px 5px 5px #000a,
-    inset -5px -5px 5px #a7a6a6aa;
+  z-index: 1;
+  box-shadow: inset 5px 5px 5px #a7a6a6aa,
+              inset -5px -5px 5px #000a;
 }
 
 #about .col-left .about-img:hover.about-img::before {
   opacity: 0;
+  transform: scale(1.1);
+  transform-origin: left;
 }
 
 #about .col-left .about-img::after {
@@ -1479,20 +1484,17 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
+  background-image: url(/img/shakexblue.jpg);
+  background-size: cover;
+  background-position: top;
   border-radius: 10px;
   transition: 1s ease;
   box-shadow: inset 5px 5px 10px #fffa,
-    inset -5px -5px 5px #000a;
-
+              inset -5px -5px 5px #000a;
 }
 
-#about .col-left .about-img:hover.about-img::after {
-  opacity: 1;
-  transform-style: preserve-3d;
-}
 
-#me {
+/* #me {
   height: 100%;
   width: 100%;
   border-radius: 10px;
@@ -1500,9 +1502,8 @@ span {
   margin: 0px auto;
   transform: scale(.8) rotateY(40deg) skewX(20deg);
   transform: preserve-3d;
-  /* transform: scale(.9); */
   transition: 1s ease;
-}
+} */
 
 #about .col-left .about-img:hover #me {
   transform-style: preserve-3d;
