--- a/css/style.css
+++ b/css/style.css
@@ -1448,62 +1448,63 @@ span {
   width: 90%;
   position: relative;
   border-radius: 10px;
+  border: none;
+  outline: none;
   margin-top: 20px;
   transition: .5s ease;
   transform: preserve-3d;
   cursor: pointer;
-
+  overflow: hidden;
 }
 
 #about .col-left .about-img::before {
   position: absolute;
-  content: '';
+  content: 'Boitumelo Sempe';
+  color: #000;
+  font-size: 1.5em;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  text-align: left;
+  padding: .3em;
   background-image: url('../img/me.jpg');
   background-size: cover;
   border-radius: 10px;
   transition: 1s ease;
-  z-index: 1;
-  box-shadow: inset 5px 5px 5px #a7a6a6aa,
-              inset -5px -5px 5px #000a;
+  box-shadow: inset 5px 5px 5px #fffa,
+              inset -10px -10px 10px #000a;
 }
 
 #about .col-left .about-img:hover.about-img::before {
   opacity: 0;
   transform: scale(1.1);
-  transform-origin: left;
+  transform-origin: left; 
 }
 
 #about .col-left .about-img::after {
   position: absolute;
-  content: '';
+  content: 'Shakex Sempe';
+  padding: .3em;
+  text-align: left;
+  font-size: 1.5em;
+  color:#0000ff;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
   background-image: url('../img/shakexblue.jpg');
   background-size: cover;
   background-position: top;
   border-radius: 10px;
   transition: 1s ease;
-  box-shadow: inset 5px 5px 10px #fffa,
-              inset -5px -5px 5px #000a;
+  box-shadow: inset 5px 5px 5px #fffa,
+              inset -10px -10px 10px #000a;
 }
-
-
-/* #me {
-  height: 100%;
-  width: 100%;
-  border-radius: 10px;
-  object-fit: cover;
-  margin: 0px auto;
-  transform: scale(.8) rotateY(40deg) skewX(20deg);
-  transform: preserve-3d;
-  transition: 1s ease;
-} */
+#about .col-left .about-img:hover.about-img::after {
+  opacity: 1;
+} 
 
 #about .col-left .about-img:hover #me {
   transform-style: preserve-3d;
