--- a/forms/form.scss
+++ b/forms/form.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Poppins:wght@400;500;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
   outline: none;
-  font-family: 'Poppins', sans-serif;
+//   font-family: 'Poppins', sans-serif;
+  font-family: 'Gruppo', cursive;
 }
 .form-nav {
     h1 {
@@ -35,10 +36,11 @@
     }
 
     .form-container {
-        border: 1px solid yellow;
+        border: none;
+        outline: none;
         background: #fff;
         width: 330px;
-        margin-top: 10vh;
+        margin-top: 8vh;
         text-align: center;
         border-radius: 5px;
         padding: 50px 35px 10px 35px;
@@ -64,7 +66,7 @@
                     .title {
                         text-align: left;
                         font-size: 25px;
-                        font-weight: 500;
+                        font-weight: 900;
                     }
 
                     .field { 
@@ -77,12 +79,13 @@
                         .label {
                             position: absolute;
                             top: -30px;
-                            font-weight: 500;
-                            color: blue;
+                            font-weight: 800;
+                            color: #dc143c;
                             font-size: 1.4em;
                         }
 
                         input {
+                            font-family: 'Poppins', sans-serif;
                             height: 100%;
                             width: 100%;
                             border: 1px solid lightgrey;
@@ -103,7 +106,6 @@
                             width: 100%;
                             height: calc(100% + 5px);
                             border: none;
-                            background: #dc143c;
                             margin-top: -20px;
                             border-radius: 5px;
                             color: #fff;
@@ -113,9 +115,44 @@
                             letter-spacing: 1px;
                             text-transform: uppercase;
                             transition: 0.5s ease;
+                            position: relative;
+
+                            &::before,
+                            &::after {
+                                position: absolute;
+                                content: 'next';
+                                display: grid;
+                                letter-spacing: .15em;
+                                
+                                place-items: center;
+                                font-weight: 600;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                border-radius: 5px;
+                                transition: .2s;
+                            }
+                            &::before {
+                                background: #dc143c;
+                                z-index: 2;
+                                box-shadow: inset 3px 3px 5px #fffa,
+                                            inset -3px -3px 5px #000a;
+                            }
+                            &::after{
+                                opacity: 0;
+                                background: #29323c;
+                                box-shadow: inset 3px 3px 5px #000a,
+                                            inset -3px -3px 5px #fffa;
+                            }
 
                             &:hover {
-                                background: #29323c;
+                                &::before {opacity: 0;}
+                                &::after {opacity: 1;}
+                            }
+                            &:active {
+                                transition: .2s;
+                                transform: scale(.9);
                             }
                         }
                     }
@@ -144,9 +181,10 @@
                 text-align: center;
                 width: 100%;
                 position: relative;
+                margin: 1em auto;
 
                 p {
-                    font-weight: 500;
+                    font-weight: 800;
                     font-size: 1.6em;
                     color: #000;
                     margin-bottom: 8px;
@@ -174,6 +212,9 @@
                         font-weight: 500;
                         font-size: 17px;
                         line-height: 25px;
+                        font-family: 'Poppins', sans-serif;
+                        
+
                     }
                     &:active {
                         span {
