--- a/css/form.css
+++ b/css/form.css
@@ -145,7 +145,8 @@
           height: 25px;
           width: 25px;
           border: 2px solid #000;
-          display: inline-block;
+          display: grid;
+          place-items: center;
           border-radius: 50%;
           position: relative;
           transition: 0.2s; }
@@ -157,8 +158,7 @@
             left: 50%;
             transform: translateX(-50%);
             font-weight: 500;
-            font-size: 17px;
-            line-height: 25px;
+            font-size: 1.5em;
             font-family: 'Poppins', sans-serif; }
           .welcome-section .form-container .form-progress-bar .step .bullet:active span {
             display: none; }
