--- a/css/form.css
+++ b/css/form.css
@@ -36,9 +36,13 @@
     border-radius: 5px;
     padding: 50px 35px 10px 35px; }
     .welcome-section .form-container header {
-      font-size: 35px;
+      text-transform: capitalize;
+      font-size: 2em;
       font-weight: 600;
-      margin: 0 0 30px 0; }
+      margin: 0 0 30px 0;
+      padding: .2em;
+      border-radius: 5px;
+      box-shadow: inset 2px 2px 4px #ddd, inset -2px -2px 4px #000a; }
     .welcome-section .form-container .form-outer {
       width: 100%;
       overflow: hidden; }
