--- a/forms/form.scss
+++ b/forms/form.scss
@@ -31,6 +31,8 @@
     min-height: 100vh;
     overflow: hidden;
 
+    
+
     ::selection {
         color: green;
         background: pink;
@@ -47,9 +49,14 @@
         padding: 50px 35px 10px 35px;
 
         header {
-            font-size: 35px;
+            text-transform: capitalize;
+            font-size: 2em;
             font-weight: 600;
             margin: 0 0 30px 0;
+            padding: .2em;
+            border-radius: 5px;
+            box-shadow: inset 2px 2px 4px #ddd,
+                    inset -2px -2px 4px #000a;
         }
 
         .form-outer {
