--- a/css/form.css
+++ b/css/form.css
@@ -96,10 +96,11 @@
               letter-spacing: 1px;
               text-transform: uppercase;
               transition: 0.5s ease;
-              position: relative; }
+              position: relative;
+              z-index: 3; }
               .welcome-section .form-container .form-outer form .page .field button::before, .welcome-section .form-container .form-outer form .page .field button::after {
                 position: absolute;
-                content: 'next';
+                content: '';
                 display: grid;
                 letter-spacing: .15em;
                 place-items: center;
@@ -108,11 +109,11 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
+                z-index: -1;
                 border-radius: 5px;
                 transition: .2s; }
               .welcome-section .form-container .form-outer form .page .field button::before {
                 background: #dc143c;
-                z-index: 2;
                 box-shadow: inset 3px 3px 5px #fffa, inset -3px -3px 5px #000a; }
               .welcome-section .form-container .form-outer form .page .field button::after {
                 opacity: 0;
@@ -131,6 +132,8 @@
               margin-right: 3px;
               font-size: 17px;
               color: #ddd; }
+              .welcome-section .form-container .form-outer form .page .btns button.prev::before {
+                background: #a00c2a; }
             .welcome-section .form-container .form-outer form .page .btns button.next {
               margin-left: 3px; }
     .welcome-section .form-container .form-progress-bar {
@@ -151,8 +154,7 @@
           height: 25px;
           width: 25px;
           border: 2px solid #000;
-          display: grid;
-          place-items: center;
+          display: inline-block;
           border-radius: 50%;
           position: relative;
           transition: 0.2s; }
@@ -165,6 +167,7 @@
             transform: translateX(-50%);
             font-weight: 500;
             font-size: 1.5em;
+            line-height: 22px;
             font-family: 'Poppins', sans-serif; }
           .welcome-section .form-container .form-progress-bar .step .bullet:active span {
             display: none; }
