--- a/forms/form.scss
+++ b/forms/form.scss
@@ -128,26 +128,26 @@
                             text-transform: uppercase;
                             transition: 0.5s ease;
                             position: relative;
+                            z-index: 3;
 
                             &::before,
                             &::after {
                                 position: absolute;
-                                content: 'next';
+                                content: '';
                                 display: grid;
                                 letter-spacing: .15em;
-                                
                                 place-items: center;
                                 font-weight: 600;
                                 top: 0;
                                 left: 0;
                                 width: 100%;
                                 height: 100%;
+                                z-index: -1;
                                 border-radius: 5px;
                                 transition: .2s;
                             }
                             &::before {
                                 background: #dc143c;
-                                z-index: 2;
                                 box-shadow: inset 3px 3px 5px #fffa,
                                             inset -3px -3px 5px #000a;
                             }
@@ -175,6 +175,9 @@
                                 margin-right: 3px;
                                 font-size: 17px;
                                 color: #ddd;
+                                &::before {
+                                    background: #a00c2a;
+                                }
                             }
                             &.next {
                                 margin-left: 3px;
@@ -206,8 +209,7 @@
                     height: 25px;
                     width: 25px;
                     border: 2px solid #000;
-                    display: grid;
-                    place-items: center;
+                    display: inline-block;
                     border-radius: 50%;
                     position: relative;
                     transition: 0.2s;
@@ -224,7 +226,7 @@
                         transform: translateX(-50%);
                         font-weight: 500;
                         font-size: 1.5em;
-                        // line-height: 25px;
+                        line-height: 22px;
                         font-family: 'Poppins', sans-serif;
                         
 
