--- a/css/form.css
+++ b/css/form.css
@@ -6,7 +6,7 @@
   font-family: 'Gruppo', cursive; }
 
 .form-nav {
-  background: #29323c; }
+  background: transparent; }
   .form-nav h1 {
     font-size: 2em; }
   .form-nav #form-toggle {
@@ -18,6 +18,8 @@
 
 .welcome-section {
   animation: none;
+  background-image: none;
+  background-color: #29323c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +36,8 @@
     margin-top: 8vh;
     text-align: center;
     border-radius: 5px;
-    padding: 50px 35px 10px 35px; }
+    padding: 50px 35px 10px 35px;
+    box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
     .welcome-section .form-container header {
       text-transform: capitalize;
       font-size: 2em;
@@ -77,6 +80,8 @@
               padding-left: 15px;
               font-size: 18px;
               text-transform: capitalize; }
+              .welcome-section .form-container .form-outer form .page .field input:focus {
+                border: 1px solid skyblue; }
             .welcome-section .form-container .form-outer form .page .field select {
               width: 100%;
               padding-left: 10px;
@@ -159,8 +164,8 @@
           position: relative;
           transition: 0.2s; }
           .welcome-section .form-container .form-progress-bar .step .bullet:active {
-            border-color: #d43f8d;
-            background: #d43f8d; }
+            border-color: #dc143c;
+            background: #dc143c; }
           .welcome-section .form-container .form-progress-bar .step .bullet span {
             position: absolute;
             left: 50%;
