form-nav background

--- a/css/form.css
+++ b/css/form.css
@@ -6,7 +6,7 @@
   font-family: 'Gruppo', cursive; }
 
 .form-nav {
-  background: transparent; }
+  background: #29323c; }
   .form-nav h1 {
     font-size: 2em; }
   .form-nav #form-toggle {
