--- a/forms/form.scss
+++ b/forms/form.scss
@@ -7,7 +7,7 @@
   font-family: 'Gruppo', cursive;
 }
 .form-nav {
-    background: transparent;
+    background: #29323c;
     h1 {
         font-size: 2em;
     }
