--- a/forms/form.scss
+++ b/forms/form.scss
@@ -32,6 +32,7 @@
     align-items: center;
     min-height: 100vh;
     overflow: hidden;
+    // overflow: scroll;
 
 
 
@@ -96,6 +97,7 @@
                             font-weight: 800;
                             color: #dc143c;
                             font-size: 1.4em;
+                            text-transform: capitalize;
                         }
 
                         input {
@@ -107,7 +109,13 @@
                             border-radius: 5px;
                             padding-left: 15px;
                             font-size: 18px;
+
+                            &::placeholder {
                             text-transform: capitalize;
+                            }
+                            &:invalid {
+                                background-color: yellow;
+                            }
 
                             &:focus {
                                 border: 1px solid skyblue;
@@ -291,7 +299,7 @@
                 .check {
                     position: absolute;
                     left: 50%;
-                    top: 75%;
+                    top: 80%;
                     font-size: 15px;
                     transform: translate(-50%, -50%);
                     display: none;
