--- a/css/form.css
+++ b/css/form.css
@@ -24,7 +24,8 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  overflow: hidden; }
+  overflow: hidden;
+  overflow: scroll; }
   .welcome-section ::selection {
     color: green;
     background: pink; }
@@ -83,7 +84,7 @@
               .welcome-section .form-container .form-outer form .page .field input::placeholder {
                 text-transform: capitalize; }
               .welcome-section .form-container .form-outer form .page .field input:invalid {
-                background-color: yellow; }
+                background-color: orange; }
               .welcome-section .form-container .form-outer form .page .field input:focus {
                 border: 1px solid skyblue; }
             .welcome-section .form-container .form-outer form .page .field select {
