--- a/forms/form.scss
+++ b/forms/form.scss
@@ -32,7 +32,7 @@
     align-items: center;
     min-height: 100vh;
     overflow: hidden;
-    // overflow: scroll;
+    overflow: scroll;
 
 
 
@@ -114,7 +114,7 @@
                             text-transform: capitalize;
                             }
                             &:invalid {
-                                background-color: yellow;
+                                background-color: orange;
                             }
 
                             &:focus {
