--- a/forms/form.scss
+++ b/forms/form.scss
@@ -31,7 +31,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
     overflow: scroll;
 
 
@@ -120,10 +120,13 @@
                             &:focus {
                                 border: 1px solid skyblue;
                             }
-
+                            
                         
                         }
-
+                        textarea {
+                            height: 100px;
+                            width: 100%;
+                        }
                         select {
                             width: 100%;
                             padding-left: 10px;
