--- a/css/form.css
+++ b/css/form.css
@@ -55,6 +55,18 @@
         .welcome-section .form-container .form-outer form .page {
           width: 25%;
           transition: margin-left .3s ease-in-out; }
+          .welcome-section .form-container .form-outer form .page#message-page {
+            position: relative;
+            padding: .5em; }
+            .welcome-section .form-container .form-outer form .page#message-page textarea {
+              padding: 2em;
+              margin: 1em auto; }
+              .welcome-section .form-container .form-outer form .page#message-page textarea::placeholder {
+                color: #333; }
+            .welcome-section .form-container .form-outer form .page#message-page .btns {
+              position: absolute;
+              bottom: 0;
+              left: 0; }
           .welcome-section .form-container .form-outer form .page .title {
             text-align: left;
             font-size: 25px;
@@ -81,9 +93,9 @@
               padding-left: 15px;
               font-size: 18px; }
               .welcome-section .form-container .form-outer form .page .field input::placeholder {
-                text-transform: capitalize; }
+                font-size: .7em; }
               .welcome-section .form-container .form-outer form .page .field input:invalid {
-                background-color: orange; }
+                background-color: #29323c; }
               .welcome-section .form-container .form-outer form .page .field input:focus {
                 border: 1px solid skyblue; }
             .welcome-section .form-container .form-outer form .page .field textarea {
@@ -159,9 +171,9 @@
         margin: 1em auto; }
         .welcome-section .form-container .form-progress-bar .step p {
           font-weight: 800;
-          font-size: 1.6em;
+          font-size: 1.3em;
           color: #000;
-          margin-bottom: 8px; }
+          margin: .4em auto; }
         .welcome-section .form-container .form-progress-bar .step .bullet {
           height: 25px;
           width: 25px;
