--- a/forms/form.scss
+++ b/forms/form.scss
@@ -77,6 +77,24 @@
                 .page {
                     width: 25%;
                     transition: margin-left .3s ease-in-out;
+                    &#message-page {
+                        position: relative;
+                        padding: .5em;
+                        textarea {
+                            padding: 2em;
+                            margin: 1em auto;
+
+                            &::placeholder {
+                                color: #333;
+                            }
+                        }
+                        .btns {
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                        }
+                        
+                    }
 
                     .title {
                         text-align: left;
@@ -111,10 +129,10 @@
                             font-size: 18px;
 
                             &::placeholder {
-                            text-transform: capitalize;
+                            font-size: .7em;
                             }
                             &:invalid {
-                                background-color: orange;
+                                background-color: #29323c;
                             }
 
                             &:focus {
@@ -221,9 +239,10 @@
 
                 p {
                     font-weight: 800;
-                    font-size: 1.6em;
+                    font-size: 1.3em;
                     color: #000;
-                    margin-bottom: 8px;
+                    margin: .4em auto;
+                    // margin-bottom: 8px;
                 }
 
                 .bullet {
