--- a/forms/form.scss
+++ b/forms/form.scss
@@ -132,7 +132,7 @@
                             font-size: .7em;
                             }
                             &:invalid {
-                                background-color: #29323c;
+                                border-color: #29323c;
                             }
 
                             &:focus {
