--- a/forms/form.scss
+++ b/forms/form.scss
@@ -135,7 +135,7 @@
                             }
                             &:invalid {
                                 box-shadow: inset 2px 2px 4px #dddc,
-                                            inset -2px -2px 4px #dc143c;
+                                            inset -2px -2px 4px #af2541;
                             }
 
                             &:focus {
