--- a/forms/form.scss
+++ b/forms/form.scss
@@ -81,7 +81,7 @@
                         position: relative;
                         padding: .5em;
                         textarea {
-                            padding: 2em;
+                            padding: .2em;
                             margin: 1em auto;
 
                             &::placeholder {
@@ -118,6 +118,7 @@
                             text-transform: capitalize;
                         }
 
+
                         input {
                             //  ubuntu font
                             font-family: 'Poppins', sans-serif;
@@ -134,14 +135,14 @@
                             font-size: .7em;
                             }
                             &:invalid {
-                                box-shadow: inset 2px 2px 4px #dddc,
-                                            inset -2px -2px 4px #af2541;
+                                background: #ddd;
+                                border: 1px solid rgb(153, 7, 7);
                             }
 
                             &:focus {
                                 border: none;
                                 box-shadow: inset 2px 2px 4px #ddda,
-                                            inset -2px -2px 4px #000a;
+                                            inset -2px -2px 4px #41061298;
                             }
                             
                         
